stave-macros/tests/fail/methods_required_not_available.stderr
error[E0599]: no method named `finish` found for struct `Server<__HostUnset, __PortUnset>` in the current scope
  --> tests/fail/methods_required_not_available.rs:48:64
   |
 5 | #[builder]
   | ---------- method `finish` not found for this struct
...
48 |     let _ = Server::new().sets_timeout(Duration::from_secs(5)).finish();
   |                                                                ^^^^^^ method not found in `Server<__HostUnset, __PortUnset>`
   |
   = note: the method was found for
           - `Server<__HostSet, __PortSet>`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `finish`, perhaps you need to implement it:
           candidate #1: `Hasher`

error[E0599]: no method named `finish` found for struct `Server<__HostSet, __PortUnset>` in the current scope
  --> tests/fail/methods_required_not_available.rs:50:50
   |
 5 | #[builder]
   | ---------- method `finish` not found for this struct
...
50 |     let _ = Server::new().sets_host("localhost").finish();
   |                                                  ^^^^^^ method not found in `Server<__HostSet, __PortUnset>`
   |
   = note: the method was found for
           - `Server<__HostSet, __PortSet>`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `finish`, perhaps you need to implement it:
           candidate #1: `Hasher`

error[E0599]: no method named `set_note_with_host` found for struct `Server<__HostState, __PortState>` in the current scope
  --> tests/fail/methods_required_not_available.rs:52:43
   |
 5 | #[builder]
   | ---------- method `set_note_with_host` not found for this struct
...
52 |     let _ = Server::new().sets_port(8080).set_note_with_host();
   |                                           ^^^^^^^^^^^^^^^^^^
   |
help: there is a method `sets_host` with a similar name, but with different arguments
  --> tests/fail/methods_required_not_available.rs:23:1
   |
23 | #[methods]
   | ^^^^^^^^^^
   = note: this error originates in the attribute macro `methods` (in Nightly builds, run with -Z macro-backtrace for more info)
